Bluetooth device seacrh: filter deleted

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="toolbar">
 
-            <div id="device-name" class="name">Terminal</div>
+            <div id="device-name" class="name">Terminal 17-11-1.0</div>
 
             <div class="buttons">
 
