--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
             <div id="device-name" class="name">Terminal 06.12.2022-1.0</div>
 
+            <div><input type="checkbox" id="test"></div>
+
             <div class="buttons">
 
                 <button id="connect" type="button" aria-label="Connect">
